# KKY-MPV

./: README.md  pyproject.toml
fungiclef2025/: 01-create-embeddings-cache-beit-dinov2b.ipynb  01-create-embeddings-cache-dinov2l.ipynb  01-create-embeddings-cache-samh.ipynb  02-merge-cached-embeddings.ipynb  03-make-submissions.ipynb  LICENSE  README.md  environment.yml
notebooks/: 02-Evaluate-embeddings-views.ipynb
scripts/: schedule_ge.sh
src/: config.py
src/augmentations/: __init__.py  albumentations.py  image_views.py  torchvision.py  vit_torchvision.py
src/criterion/: classification.py
src/data/: base_datamodule.py  image_datamodule.py
src/data/catalog/: __init__.py  base.py  fungitastic.py
src/data/components/: download.py  embedding_utils.py  encoder.py  splits.py  utils.py
src/data/datasets/: __init__.py  base.py  embedding_dataset.py  image_dataset.py
src/models/components/: feature_extractors.py
src/scripts/: generate_embeddings.py  utils.py
